--- a/tasks/electron-react-ts/public/index.html
+++ b/tasks/electron-react-ts/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'self'" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
     <title>Tasks</title>
   </head>
   <body>
